--- a/vignettes/logisticRegression.Rmd
+++ b/vignettes/logisticRegression.Rmd
@@ -8,7 +8,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-In this example we use the package to infer the bias and coefficients in a logistic regression model using [stochastic gradient Langevin Dynamics with control variates](https://arxiv.org/pdf/1706.05439.pdf). So we assume we have data $\mathbf x_1, \dots, \mathbf x_N$ and response variables $y_1, \dots, y_N$ with likelihood
+In this example we use the package to infer the bias and coefficients in a logistic regression model using [stochastic gradient Langevin Dynamics with control variates](https://arxiv.org/pdf/1706.05439.pdf). We assume we have data $\mathbf x_1, \dots, \mathbf x_N$ and response variables $y_1, \dots, y_N$ with likelihood
 \[
     p(\mathbf X, \mathbf y | \beta, \beta_0 ) = \prod_{i=1}^N \left[ \frac{1}{1+e^{-\beta_0 + \mathbf x_i \beta}} \right]^{y_i} \left[ 1 - \frac{1}{1+e^{-\beta_0 + \mathbf x_i \beta}} \right]^{1-y_i}
 \]
@@ -20,7 +20,7 @@ library(sgmcmc)
 data("covertype")
 ```
 
-First we'll remove about 10000 observations from the original dataset to form a test set, this will be used to check that our algorithm did okay. Then we'll separate out the response variable `y` and the explanatory variables `X`. The response variable is the first column in the dataset.
+First we'll remove about 10000 observations from the original dataset to form a test set, this will be used to check the validity of the algorithm. Then we'll separate out the response variable `y` and the explanatory variables `X`. The response variable is the first column in the dataset.
 ```{r}
 testObservations = sample(nrow(covertype), 10^4)
 testSet = covertype[testObservations,]
@@ -46,7 +46,7 @@ logLik = function(params, dataset) {
 }
 ```
 
-Next we want to define our log prior, we assume each $\beta_i$ have independent prior Laplace distribution, with location 0 and scale 1, so that $\log p( \beta ) = - \sum_{i=0}^d | \beta_i|$. Similar to the log likelihood definition, the log prior is defined as a function with input `params`. In our case the definition is
+Next we want to define our log-prior density, we assume each $\beta_i$ has an independent Laplace prior distribution, with location 0 and scale 1, so that $\log p( \beta ) = - \sum_{i=0}^d | \beta_i|$. Similar to the log-likelihood function, the log-prior density is defined as a function with input `params`. In our case the definition is
 ```{r}
 logPrior = function(params) {
     logPrior = - (tf$reduce_sum(tf$abs(params$beta)) + tf$reduce_sum(tf$abs(params$bias)))
@@ -54,23 +54,23 @@ logPrior = function(params) {
 }
 ```
 
-Finally we'll set the stepsize parameters for the algorithm, along with the minibatch size. `sgldcv` relies on two stepsize parameters, one for the optimization step and one for the MCMC step. To allow stepsizes to be set for different parameters, the form of the stepsizes for the MCMC will be lists with names corresponding to each of the names in `params`. The optimization step will just be one value as the stepsize is automatically tuned
+Finally, we'll set the stepsize parameters for the algorithm, along with the minibatch size. `sgldcv` relies on two stepsize parameters, one for the optimization step and one for the MCMC step. To allow stepsizes to be set for different parameters, the form of the stepsizes for the MCMC will be lists with names corresponding to each of the names in `params`. The optimization step will just be one value as the stepsize is automatically tuned
 ```{r}
 stepsizesMCMC = list("beta" = 2e-5, "bias" = 2e-5)
 stepsizesOptimization = 1e-1
 ```
-Alternatively we can simply use the shortcut `stepsizesMCMC = 2e-5` which would set the stepsizes for each parameter to `2e-5`. The optimization step is performed using the `TensorFlow` `AdamOptimizer`.
+Alternatively, we can simply use the shortcut `stepsizesMCMC = 2e-5` which would set the stepsizes for each parameter to `2e-5`. The optimization step is performed using the `TensorFlow` `AdamOptimizer`.
 
 Now we can run our SGLD-CV algorithm using the function `sgldcv` from the `sgmcmc` package, which returns a list of Markov chains for each parameter as output. Use the argument `verbose = FALSE` to hide the output of the function. As the dataset size is quite large, we'll change the `minibatchSize` from its default `0.01 * N` to `500`. To allow a small 1000 iteration burn-in we'll set the number of iterations to be 11000
 ```{r message=FALSE}
 output = sgldcv(logLik, dataset, params, stepsizesMCMC, stepsizesOptimization, logPrior = logPrior, minibatchSize = 500, nIters = 11000 ) 
 ```
 
-To check the algorithm converged, we'll plot the average log predictive density of the data from our test set every 10 iterations. Let $$\hat \pi_i^{(j)} := \frac{1}{1 + \exp\left[-\beta_0^{(j)} - \mathbf x_i \beta^{(j)}\right]},$$
-here $\hat \pi_i^{(j)}$ denotes the probability that the $j^{\text{th}}$ iteration of our MCMC chain assigned to observation $i$ in our test set. Define our test set by $T$, the average log predictive is given by
+To check the algorithm converged, we'll plot the average log-predictive density of the data from our test set every 10 iterations. Let $$\hat \pi_i^{(j)} := \frac{1}{1 + \exp\left[-\beta_0^{(j)} - \mathbf x_i \beta^{(j)}\right]},$$
+here $\hat \pi_i^{(j)}$ denotes the probability that the $j^{\text{th}}$ iteration of our MCMC chain assigned to observation $i$ is in our test set. Define our test set by $T$, the average log-predictive density is given by
 $$A := \frac{1}{|T|} \sum_{y_i \in T} \left[ y_i \log \hat \pi_i^{(j)} + (1 - y_i) \log(1 - \hat \pi_i^{(j)}) \right]$$
 
-To check convergence, we'll plot the average log predictive every 10 iterations as follows
+To check convergence, we'll plot the average log-predictive density every 10 iterations as follows
 ```{r}
 yTest = testSet[,1]
 XTest = testSet[,2:ncol(testSet)]
