fixed some small typos

--- a/vignettes/sgmcmc.Rmd
+++ b/vignettes/sgmcmc.Rmd
@@ -10,9 +10,9 @@ vignette: >
 
 The goal of `sgmcmc` is to make it as easy as possible for users to run stochastic gradient MCMC (SGMCMC) algorithms. SGMCMC are algorithms which enable MCMC to scale more easily to large datasets, as traditional MCMC can run very slowly as dataset sizes grow.
 
-`sgmcmc` implements a lot of the popular stochastic gradient MCMC methods including [SGLD](http://people.ee.duke.edu/~lcarin/398_icmlpaper.pdf), [SGHMC](https://arxiv.org/pdf/1402.4102v2.pdf) and [SGNHT](http://papers.nips.cc/paper/5592-bayesian-sampling-using-stochastic-gradient-thermostats.pdf). The package uses automatic differentiation, so all the differentiation needed for the methods is calculated automatically. Control variate methods can be used in order to improve the efficiency of the methods as proposed in the [recent publication](https://github.com/jbaker92/stochasticGradientMCMC). All users need to specify to run these algorithms is the data; the log likelihood and log prior; the parameter starting values; and a few tuning parameters. 
+`sgmcmc` implements a lot of the popular stochastic gradient MCMC methods including [SGLD](http://machinelearning.wustl.edu/mlpapers/paper_files/ICML2011Welling_398.pdf), [SGHMC](https://arxiv.org/pdf/1402.4102v2.pdf) and [SGNHT](http://papers.nips.cc/paper/5592-bayesian-sampling-using-stochastic-gradient-thermostats.pdf). The package uses automatic differentiation, so all the differentiation needed for the methods is calculated automatically. Control variate methods can be used in order to improve the efficiency of the methods as proposed in the [recent publication](https://github.com/jbaker92/stochasticGradientMCMC). This package is designed to be user friendly. In order to execute these algorithms, users only need to specify the data; the log-likelihood function and log-prior density; the parameter starting values; and a few tuning parameters. 
 
-To enable as much flexibility as possible, the data and parameter starting points fed to the functions in `sgmcmc` are specified as lists. This allows users to specify multiple parameters and datasets. It also allows the user to easily reference these quantities in the log likelihood and log prior, and to set different stepsizes for different paramters (essential when parameters are on different scales).
+To enable as much flexibility as possible, the data and parameter starting points fed to the functions in `sgmcmc` are specified as lists. This allows users to specify multiple parameters and datasets. It also allows the user to easily reference these quantities in the log-likelihood function and log-prior density, and to set different stepsizes for different paramters (essential when parameters are on different scales).
 
 ### Specifying the Data
 
@@ -20,7 +20,7 @@ As we mentioned earlier, the datasets you wish to use are specified as a list. S
 ```{r eval=FALSE}
 dataset = list("X" = X, "Y" = Y)
 ```
-You can specify as many datasets as you like, the most important thing is that your naming is consistent, so you use the same names in your log likelihood and log prior functions, and in your list of stepsizes.
+You can specify as many datasets as you like, the most important thing is that your naming is consistent, so you use the same names in your log-likelihood and log-prior functions, and in your list of stepsizes.
 
 The functions assume that each observation is located on the first axis of the object. Suppose `Y` is a 2d matrix, then the observation $Y_i$ should be located at `dataset$Y[i,]`. Similarly if `X` is a 3d array, observation $X_i$ should be located at `dataset$X[i,,]`.
 
@@ -33,11 +33,11 @@ params = list("theta1" = rep(0, 3), "theta2" = rep(0, 3))
 
 ### Specifying the Log Likelihood and Log Prior
 
-The log likelihood is specified as a function of the `dataset` and `params`, which have the same names as the lists you just specified. The only difference is that the objects inside the lists will have automatically been converted to TensorFlow objects for you. The `dataset` list will contain TensorFlow placeholders. The `params` list will contain TensorFlow variables. The `logLik` function should be a function that takes these lists as input and returns what the log likelihood value should be given the current parameter and data values. It should do this using TensorFlow operations. More details about how TensorFlow works can be found [here](https://tensorflow.rstudio.com/).
+The log-likelihood function is specified as a function of the `dataset` and `params`, which have the same names as the lists you just specified. The only difference is that the objects inside the lists will have automatically been converted to TensorFlow objects for you. The `dataset` list will contain TensorFlow placeholders. The `params` list will contain TensorFlow variables. The `logLik` function should be a function that takes these lists as input and returns what the log-likelihood value should be given the current parameter and data values. It should do this using TensorFlow operations. More details about how TensorFlow works in `R` can be found [here](https://tensorflow.rstudio.com/).
 
-The log prior is specified in exactly the same way except that the function should only take `params` as input, as a prior should be independent of the dataset. You do not have to specify the prior at all, and this leads to the algorithm using a uniform, uninformative prior.
+The log-prior density is specified in exactly the same way except that the function should only take `params` as input, as a prior should be independent of the dataset. You do not have to specify the prior at all, and this leads to the algorithm using a uniform, uninformative prior.
 
-Suppose we want to simulate from the mean of a multivariate Normal density with each component of the mean having a Student T prior, we would specify this as follows
+Suppose we want to simulate from the mean of a multivariate Normal density with each component of the mean having a Student-T prior, we would specify this as follows
 ```{r eval=FALSE}
 library(MASS)
 # Simulate and declare dataset
@@ -62,7 +62,7 @@ logPrior = function(params) {
     return(tf$reduce_sum(distn$log_prob(params$theta)))
 }
 ```
-Most of the time just specifying the constants in these functions, such as `SigmaDiag` as `R` objects will be fine. But there are sometimes issues when these constants get automatically converted to `tf$float64` objects by `TensorFlow` rather than `tf$float32`. If you run into errors involving `tf$float64` then force the constants to be input as `tf$float32` by using `SigmaDiag = tf$constant( c( 1, 1 ), dtype = tf$float32 )`.
+Most of the time just specifying the constants in these functions, such as `SigmaDiag` as `R` objects will be fine. But occassionally there are issues when these constants get automatically converted to `tf$float64` objects by `TensorFlow` rather than `tf$float32`. If you run into errors involving `tf$float64` then force the constants to be input as `tf$float32` by using `SigmaDiag = tf$constant( c( 1, 1 ), dtype = tf$float32 )`.
 
 ### Specifying the Tuning Parameters
 
@@ -72,26 +72,26 @@ stepsize = list( "theta = 1e-5" )
 ```
 A short hand is just to set `stepsize = 1e-5` which just sets the stepsize of each parameter to be `1e-5`. This shorthand can be used for any of the tuning constants.
 
-So to get `sgld` working for the multivariate normal log likelihood we specified and an uninformative uniform prior we can simply run
+So to get `sgld` working for the multivariate Normal log-likelihood function we specified, and an uninformative uniform prior, we can simply run
 ```{r eval=FALSE}
 sgld( logLik, dataset, params, stepsize )
 ```
 similarly for `sghmc` and `sgnht`.
 
-To use the Student t prior we specified and set a minibatch size of `500` we'd use
+To use the Student-t prior we specified, and set a minibatch size of `500`, we'd use
 ```{r eval=FALSE}
 sgld( logLik, dataset, params, stepsize, logPrior = logPrior, minibatchSize = 500 )
 ```
 For more details of the other optional arguments see the main documentation in the [reference](https://stor-i.github.io/sgmcmc/reference/index.html).
 
-Any of the [control variate methods](https://arxiv.org/pdf/1706.05439.pdf) `sgldcv`, `sghmccv` and `sgnhtcv` require an extra input `optStepsize`, which is the stepsize tuning constant for the initial optimization to find the MAP estimates. This argument is simply a small numeric value, such as `0.1`, and may require some tuning, which we talk about below. To run `sgldcv` on the multivariate normal model, with specified prior we'd use
+All of the [control variate methods](https://arxiv.org/pdf/1706.05439.pdf) `sgldcv`, `sghmccv` and `sgnhtcv` require an extra input `optStepsize`, which is the stepsize tuning constant for the initial optimization to find the MAP estimates. This argument is simply a small numeric value, such as `0.1`, and may require some tuning, which we talk about below. To run `sgldcv` on the multivariate Normal model, with specified prior we'd use
 ```{r eval=FALSE}
 optStepsize = 0.1
 sgldcv( logLik, dataset, params, stepsize, optStepsize, logPrior = logPrior, minibatchSize = 500 )
 ```
 similar for `sghmccv` and `sgnhtcv`.
 
-Most of the time, parameters need tuning, we suggest doing this using cross validation. You can roughly check the algorithm is converging by inspection by checking that the `Log posterior estimate` output by the algorithm settles down eventually (it should decrease at first unless the chain converges very quickly).
+Most of the time, parameters need tuning, we suggest doing this using cross validation. You can roughly check the algorithm is converging by inspection by checking that the `Log-posterior estimate` output by the algorithm settles down eventually (it should decrease at first unless the chain converges very quickly).
 
 ### Next Steps
 We suggest for more details you read the worked examples in the Articles section, these cover a variety of models (which will be expanded as the package matures):
